<resources>
    <string name="app_name">Meet Up</string>
    <string name="app_title">MEET UP APP</string>
    <string name="splash_desc">The Meet Up App allows you to keep track of meetings with family and friends.</string>
    <string name="launch">LAUNCH</string>
    <string name="splash_icon_desc">Splash Screen Icon</string>
    <string name="label_home">Home</string>
    <string name="label_search_places">Search Places</string>
    <string name="label_friends">Friends</string>
    <string name="label_friend_details">Friend Details</string>
    <string name="label_add_friend">Add Friend</string>
    <string name="label_update_friend">Update Friend</string>
    <string name="label_meet_ups">Meet Ups</string>
    <string name="label_meet_up_details">Meet Up Details</string>
    <string name="label_add_meet_up">Add Meet Up</string>
    <string name="label_update_meet_up">Update Meet Up</string>
    <string name="label_places">Places</string>
    <string name="label_place_details"> Place Details</string>
    <string name="label_add_place">Add Place</string>
    <string name="label_update_place">Update Place</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
    <string name="friends">Friends</string>
    <string name="place">Place</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add_meet_up">Add Meet Up</string>
    <string name="add_friend">Add Friend</string>
    <string name="address">Address</string>
    <string name="update_place">Update Place</string>
    <string name="type_of_place">Type of Place</string>
    <string name="add_place">Add Place</string>
    <string name="keyword">Keyword:</string>
    <string name="search">SEARCH</string>
    <string name="update_friend">Update Friend</string>
    <string name="update_meet_up">Update Meet Up</string>
    <string name="enter_search">Enter your search term(s) here</string>
    <string name="label_name">Name:\n\t\t%s</string>
    <string name="label_email">Email Address:\n\t\t%s</string>
    <string name="label_description">Description:\n\t\t%s</string>
    <string name="label_friend">Friends:\n\t\t%s</string>
    <string name="label_place">Place:\n\t\t%s</string>
    <string name="label_date">Date:\n\t\t%s</string>
    <string name="label_time">Time:\n\t\t%s</string>
    <string name="label_address">Address:\n\t\t%s</string>
    <string name="label_place_type">Place Type:\n\t\t%s</string>
    <string name="label_phone">Phone Number:\n\t\t%s</string>
</resources>
