<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meet_up_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lentcoding.meetup.MeetUpAddActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:textColor="#00C000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:textColor="#00C000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/friends"
        android:inputType="textCapWords"
        android:textColor="#00C000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:inputType="textCapWords"
        android:textColor="#00C000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:hint="@string/select_date"
        android:inputType="date"
        android:textColor="#00C000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:hint="@string/select_time"
        android:inputType="time"
        android:textColor="#00C000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddMeetUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onClick"
        android:text="@string/add_meet_up"
        android:textColor="#00C000"
        android:textStyle="bold" />

</LinearLayout>
