<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_place_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lentcoding.meetup.PlaceUpdateActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName|textCapWords"
        android:text=""
        android:textColor="#00C000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="textPostalAddress|textCapWords"
        android:text=""
        android:textColor="#00C000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:text=""
        android:textColor="#00C000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPlaceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_of_place"
        android:inputType="textCapWords"
        android:text=""
        android:textColor="#00C000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUpdatePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onClick"
        android:text="@string/update_place"
        android:textColor="#00C000"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>
