<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucent_green"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="#000000"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/splash_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/splash_desc"
        android:textColor="@color/dark_orange"
        android:textSize="26sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imgSplashIcon"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/splash_icon_desc"
        android:gravity="center"
        android:src="@drawable/logo_big" />

    <Button
        android:id="@+id/btnLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/launch"
        android:textColor="@color/button_text"
        android:textSize="24sp" />

</LinearLayout>