<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lentcoding.meetup.SearchPlacesActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucent_green"
        android:gravity="center"
        android:text="@string/keyword"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_keyword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_search"
        android:gravity="center"
        android:paddingTop="10dip"
        android:textColor="@color/dark_orange"
        android:textSize="18sp"
        android:textStyle="italic" />


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/search"
        android:textColor="@color/button_text" />

</LinearLayout>
